添加通用服务依赖到认证服务

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.cyr.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- springCloud 提供基于consul的服务发现 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
