--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>auth-service</module>
         <module>feign-service</module>
         <module>common</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
